# heron-simulator

./: .gitignore  README.md  audioHelper.py  geometry.py  main.py  marray.py  requirements.txt  requrements.txt  setupshit.shit  simulation.py  simulator.py  synth_drone.toml  test_simulation.py
config/: arch_sim.toml  arch_test.toml  array.toml  circ_array.toml  circ_sim.toml  mic.toml  noisyMic.toml  nowalls.toml  simulation.toml  source.toml  synthSim.toml  testCfg.toml  testMic.toml
devices/: microphone.py  source.py
install/: README.md  pyproject.toml
install/heronsim/: geometry.py  marray.py  simulation.py
install/heronsim/devices/: microphone.py  source.py
test_configs/: arch.toml  arch_cases.toml  circ20.toml  circ25.toml  circ30.toml  circ_cases.toml  fancy1.toml  fancy2.toml  fancy_cases.toml  spherical.toml  spherical_fancy.toml  test_spherical.toml
test_configs/arrays/: arch.toml  circ20.toml  circ25.toml  circ30.toml  fancy1.toml  fancy2.toml
