[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "heronsim"
version = "0.4.1"
description = "Single class automated annotation tool using OpenCV"
readme = "README.md"
authors = [{ name = "Alain Keller",email = "alain.keller@ost.ch" }]
# license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
 
dependencies = ["open3d",
                      "scipy",
                      "matplotlib",
                      "numpy",
                      "tomli",
                      ]
requires-python = ">=3.5"
[tool.setuptools.packages]
find = {}
